# hadoop-mapreduce

./: README.md  block2_commands.txt  docker-compose.yaml  docker-compose.yml  docker-compose3.yaml  hue-overrides.ini  hw5.ipynb  pyproject.toml
base/: Dockerfile
block3/: commands.txt  mapper.py  mapper_std.py  reducer.py  reducer_std.py
block_2/: commands.txt
