[tool.poetry]
name = "hadoop-mapreduce"
version = "0.1.0"
description = ""
authors = ["Aleksandr Ivanov <alex.iv.vad@gmail.com>"]
readme = "README.md"
packages = [{include = "hadoop_mapreduce"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.1"
pyarrow = "^10.0.1"
pandas = "^1.5.2"
jupyter = "^1.0.0"
poetry-kernel = "^0.1.2"
ipykernel = "^6.19.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
